--- a/app/src/main/res/layout/activity_song.xml
+++ b/app/src/main/res/layout/activity_song.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/transpose"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
-        android:layout_below="@+id/song_CB_Diagram"
+        android:layout_below="@+id/Key"
         android:id="@+id/songTranspose"/>
 
     <Button
@@ -38,24 +38,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:onClick="scaleUp"/>
-
-    <!--<RadioButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/ukulele"-->
-        <!--android:layout_below="@+id/song_CB_Diagram"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:id="@+id/song_RB_Ukulele" />-->
-
-    <!--<RadioButton-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/guitar"-->
-        <!--android:layout_below="@+id/song_CB_Diagram"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:checked="true"-->
-        <!--android:id="@+id/song_RB_Guitar" />-->
 
     <Button
         android:layout_width="wrap_content"
@@ -83,14 +65,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/show_diagrams"
-        android:id="@+id/song_CB_Diagram"
-        android:layout_below="@+id/Key"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    <!--<CheckBox-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/show_diagrams"-->
+        <!--android:id="@+id/song_CB_Diagram"-->
+        <!--android:layout_below="@+id/Key"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true" />-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -108,6 +90,7 @@
         android:layout_height="wrap_content"
         android:text="@string/title"
         android:id="@+id/Songtitle"
+        android:textSize="40sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
