--- a/app/src/main/res/layout-land/activity_song.xml
+++ b/app/src/main/res/layout-land/activity_song.xml
@@ -39,32 +39,6 @@
         android:layout_alignParentStart="true"
         android:onClick="scaleUp"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/save"
-        android:id="@+id/song_BTN_save"
-        android:layout_marginBottom="12dp"
-        android:onClick="saveSettings"
-        android:layout_above="@+id/song_BTN_play"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/play"
-        android:id="@+id/song_BTN_play"
-        android:layout_marginBottom="116dp"
-        android:onClick="playSong"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,6 +68,32 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/play"
+        android:id="@+id/song_BTN_play"
+        android:onClick="playSong"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/song_BTN_save"
+        android:layout_toStartOf="@+id/song_BTN_save" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/save"
+        android:id="@+id/song_BTN_save"
+        android:onClick="saveSettings"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/Songtitle"
+        android:layout_alignStart="@+id/Songtitle"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
